fixed svg alignment. required a float left on the SVG and a line-height on the containing span

--- a/scss/playwidget.scss
+++ b/scss/playwidget.scss
@@ -1,7 +1,8 @@
 $widget_color: #0095DD;
 .play_button{
-	transform: scale(1);
+	
 }
+
 .play_button #progress_bar{
   transition: stroke-dashoffset 10s linear;
   stroke: $widget_color;
@@ -11,4 +12,14 @@ $widget_color: #0095DD;
 }
 .play_button  #stopped{
   display: none;
+}
+
+#track1_container span{
+      line-height: 30px;
+      color: #0095DD;
+      margin-left: 5px;
+      float:left;
+}
+#track1_container span svg{
+      float:left;
 }
